kubernetes/apps/docs/docs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      containers:
        - name: docs
          image: ghcr.io/konnektr-io/docs:0.2.4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
