kubernetes/apps/docs/docs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
